manifest/objects/ALTF__Insights_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ALTF__Disable_Acc_Mngr_Insight_Card_Type_Desc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox to remove the ‘What is a…’ tooltip from the details panel for insight map cards.</inlineHelpText>
        <label>Disable AM Node Type Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Insight_Card_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox to disable fields specific to the TAS methodology in the details panel when a card is selected on an insight map.</inlineHelpText>
        <label>Disable Altify Insight Node Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Narrative_View__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox to disable the Narrative View option for insight maps.</inlineHelpText>
        <label>Disable Narrative View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Opp_Mngr_Insight_Card_Type_Desc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox to remove the ‘What is a…’ tooltip from the details panel for insight map cards.</inlineHelpText>
        <label>Disable OM Node Type Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Onboarding_URL_1__c</fullName>
        <defaultValue>&quot;https://resources.altifyhelp.com/20200004&quot;</defaultValue>
        <inlineHelpText>This field specifies the image shown on the first page of the onboarding window for an empty insight map.</inlineHelpText>
        <label>Onboarding URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Onboarding_URL_2__c</fullName>
        <defaultValue>&quot;https://resources.altifyhelp.com/20200006&quot;</defaultValue>
        <inlineHelpText>This field specifies the image shown on the second page of the onboarding window for an empty insight map.</inlineHelpText>
        <label>Onboarding URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Onboarding_URL_3__c</fullName>
        <defaultValue>&quot;https://resources.altifyhelp.com/20200005&quot;</defaultValue>
        <inlineHelpText>This field specifies the image shown on the third page of the onboarding window for an empty insight map.</inlineHelpText>
        <label>Onboarding URL 3</label>
        <type>Url</type>
    </fields>
    <label>Altify Insights Settings</label>
</CustomObject>